--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <span class="dot green-dot"></span>
     </div>
     <div class="terminal-body"> <br>
-      <div class="prompt">$ Eddie Berman. Space Cowboy, Dandy Guy, and JWST Whisperer.</div>
+      <div class="prompt">$ Eddie Berman. Space Cowboy, Dandy Guy, and JWST Whisperer. <br><br>I work on Imaging, Lensing, and Simulations for COSMOS-Web: The James Webb Space Telescope Cosmic Origins Survey. See my Google Scholar for a complete list of my publications.</div>
       <br><div class="input">News<!-- <a href="old_news.html" style="color: #33ff33;">(See Older)</a>--></div> 
       <div class="prompt">&gt; (04/23/24) Joining the Network Science Institute as a Research Co-op</div> 
       <div class="prompt">&gt; (03/19/24) Gave an invited talk at Columbia University! Thank you <a href="http://user.astro.columbia.edu/~frits/Frits.html" target="_blank" style="color: #33ff33;">Frits</a> for hosting :)</div> 
