--- a/pro.html
+++ b/pro.html
@@ -123,7 +123,7 @@ em {
                   <!--<p>Federico Cassano, Luisa Li, Akul Sethi, Noah Shinn, Abby Brennan-Jones, <span class="feat">Jacob Ginesin</span>, Edward Berman, George Chakhnashvili, Anton Lozhkov, Carolyn Jane Anderson, Arjun Guha. <span class="feat">In submission to the Conference on Language Modeling, 2024</span>.</p>-->
                   <p>Companion paper to the full AAS submission, details some of the more intricate software decisions made in developing our PSF fitter ShOpt.jl. </p>
                 </div>
-                <a href="https://arxiv.org/abs/2312.12450">Can It Edit? Evaluating the Ability of Large Language Models to Follow Code Editing Instructions”</a>
+                <a href="https://arxiv.org/abs/2312.12450">Can It Edit? Evaluating the Ability of Large Language Models to Follow Code Editing Instructions</a>
                 <div class="inset">
                   <p>Federico Cassano, Luisa Li, Akul Sethi, Noah Shinn, Abby Brennan-Jones, Jacob Ginesin, <span class="feat">Edward Berman</span>, George Chakhnashvili, Anton Lozhkov, Carolyn Jane Anderson, Arjun Guha. <span class="feat">In submission to the first annual Conference on Language Modeling, 2024</span>.</p>
                   <p>We develop benchmarks to evaluate large language models on code editing performance, as previous benchmarks proved insufficient. We also fine-tune models for specifically code editing.</p>
