--- a/pro.html
+++ b/pro.html
@@ -133,7 +133,7 @@ em {
                 <div class="inset">
                   <p>Noah Shinn, Federico Cassano, <span class="feat">Edward Berman</span>, Ashwin Gopinath, Karthik Narasimhan, Shunyu Yao. arXiv preprint.</p> 
                   <p>
-                    We show that giving Large Language Models an Episodic memory buffer results in state of the art performance on a wide variety of benchmarks, including HumanEval, Alfworld, and HotpotQA.  
+                    We show that giving Large Language Models an Episodic memory buffer results in state of the art performance on a wide variety of benchmarks, including HumanEval (programming), Alfworld (decision making), and HotpotQA (reseaoning). We release Leetcode Hard Gym, a programming benchmark for LLM agents.
                   </p>
                 </div>
             </div>
