--- a/pro.html
+++ b/pro.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<style>
+    img.small-image {
+        height: 50px;  /* Set the width to a small size */
+        width: auto; /* Maintain the aspect ratio */
+    }
+</style>
     <head>
         
 <meta name="viewport" content= "width=device-width, initial-scale=1.0">
@@ -103,7 +109,7 @@ em {
         <div class="row">
             <div class="col-12">
                 <b>Contact Me</b>
-                <p>Please reach out by email: berman (dot) ed (at) northeastern (dot) edu <br />
+                <p>Please reach out by email: <img src="sig.jpeg" class="small-image"> <br />
                     Alternatively, on social media: <a href="https://www.linkedin.com/in/edward-berman-324a86226/">LinkedIn</a>, and <a href="https://github.com/EdwardBerman">GitHub</a>.</p>
             </div>
         </div>
