--- a/pro.html
+++ b/pro.html
@@ -115,7 +115,7 @@ em {
         </div>
 
         <h2 id="work">Research</h2>
-        <p><i>* indicates equal contribution.</i></p>
+        <!--<p><i>Authors ordered from most subtantial contributions to least subtantial contributions.</i></p>-->
         <div class="row">
             <div class="col-12">
                 <a href="https://arxiv.org/abs/2401.11625">Efficient PSF Modeling with ShOpt.jl: A PSF Benchmarking Study with JWST NIRCam Imaging</a>
