--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
       <span class="dot green-dot"></span>
     </div>
     <div class="terminal-body"> <br>
-      <div class="prompt">$ Eddie Berman. Space Cowboy, Dandy Guy, and JWST Whisperer. <br><br>I work on Imaging, Lensing, and Simulations for COSMOS-Web: The James Webb Space Telescope Cosmic Origins Survey. See my Google Scholar for a complete list of my publications.</div>
-      <br><div class="input">News<!-- <a href="old_news.html" style="color: #33ff33;">(See Older)</a>--></div> 
+      <div class="prompt">$ Eddie Berman. Space Cowboy, Dandy Guy, and JWST jockey. <!--<br><br>I work on Imaging, Lensing, and Simulations for COSMOS-Web: The James Webb Space Telescope Cosmic Origins Survey. See my Google Scholar for a complete list of my publications.--></div>
+      <!--<br><div class="input">News <a href="old_news.html" style="color: #33ff33;">(See Older)</a></div> 
       <div class="prompt">&gt; (04/23/24) Joining the Network Science Institute as a Research Co-op</div> 
       <div class="prompt">&gt; (03/19/24) Gave an invited talk at Columbia University! Thank you <a href="http://user.astro.columbia.edu/~frits/Frits.html" target="_blank" style="color: #33ff33;">Frits</a> for hosting :)</div> 
-      <!--<div class="prompt">&gt; (01/08/24) Awarded the PEAK Summit Research Award ($3,000)</div> -->
+      <div class="prompt">&gt; (01/08/24) Awarded the PEAK Summit Research Award ($3,000)</div> -->
       <br><div class="input">Links</div> 
       <div class="prompt">&gt; <a href="Berman_Edward_CV_Website.pdf" target="_blank" style="color: #33ff33;">CV</a>, <a href="pro.html" style="color: #33ff33;">Research Portfolio</a>, <a href="https://scholar.google.com/citations?user=rMjtDxQAAAAJ&hl=en&authuser=2" target="_blank" style="color: #33ff33;">Google Scholar</a>, <a href="https://github.com/EdwardBerman" target="_blank" style="color: #33ff33;">GitHub</a>, <a href="newHeadshotMain.jpg" target="_blank" style="color: #33ff33;">Headshot</a>, <a href="https://github.com/EdwardBerman/eddies-dotfiles---See-You-Space-Cowboy" target="_blank" style="color: #33ff33;">Dotfiles</a> <!--<a href="courses.html" target="_blank" style="color: #33ff33;">Coursework</a> --></div> 
 <!--      <br><div class="input">Select Papers</div> 
