--- a/courses.html
+++ b/courses.html
@@ -138,6 +138,7 @@
 <div class="prompt">&gt; Math 3181 Advanced Probability and Statistics</div> 
 <!--<div class="prompt">&gt; Math 3150 Real Analysis</div> -->
 <div class="prompt">&gt; Pols 2358 Current Issues in Cities and Suburbs</div> 
+<div class="prompt">&gt; Math 2341 Differential Equations and Linear Algebra</div> 
 <div class="prompt">&gt; Math 2321 Calculus 3 For Science and Engineering</div> 
 <div class="prompt">&gt; Phys 2303 Modern Physics</div> 
 <div class="prompt">&gt; CS   1800 Discrete Structures</div> 
