--- a/courses.html
+++ b/courses.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -117,7 +118,7 @@
       <span class="dot yellow-dot"></span>
       <span class="dot green-dot"></span>
     </div>
-    <div class="terminal-body"> <br>
+    <div class="terminal-body"> 
       <div class="prompt">Eddie Berman / Northeastern Courses <a href="index.html" style="color: #33ff33;">   (Back)</a><br> <br>
 
         <!--<div class="prompt">&gt; Phys 7301 Classical Mechanics/Math Methods</div> -->
