--- a/pro.html
+++ b/pro.html
@@ -114,7 +114,7 @@ em {
             </div>
         </div>
 
-        <h2 id="work">Research</h2>
+        <h2 id="work">Publications</h2>
         <!--<p><i>Authors ordered from most subtantial contributions to least subtantial contributions.</i></p>-->
         <div class="row">
             <div class="col-12">
