--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
     box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
     width: 80%; /* Adjust the width as per your requirement */
     max-width: 1000px; /* Optional: if you want to limit the maximum width */
+    max-height: 90vh; /* Prevent terminal from exceeding viewport height */
+    overflow: auto; /* Enable scrolling within terminal */
   }
 
   .terminal-header {
@@ -124,7 +126,7 @@
       <div class="prompt">&gt; (03/19/24) Gave an invited talk at Columbia University! Thank you <a href="http://user.astro.columbia.edu/~frits/Frits.html" target="_blank" style="color: #33ff33;">Frits</a> for hosting :)</div> 
       <div class="prompt">&gt; (01/08/24) Awarded the PEAK Summit Research Award ($3,000)</div> -->
       <br><div class="input">Links</div> 
-      <div class="prompt">&gt; <a href="Berman_Edward_CV_Website.pdf" target="_blank" style="color: #33ff33;">CV</a>, <a href="pro.html" style="color: #33ff33;">Research Portfolio</a>, <a href="https://scholar.google.com/citations?user=rMjtDxQAAAAJ&hl=en&authuser=2" target="_blank" style="color: #33ff33;">Google Scholar</a>, <a href="https://github.com/EdwardBerman" target="_blank" style="color: #33ff33;">GitHub</a>, <a href="newHeadshotMain.jpg" target="_blank" style="color: #33ff33;">Headshot</a>, <a href="https://github.com/EdwardBerman/eddies-dotfiles---See-You-Space-Cowboy" target="_blank" style="color: #33ff33;">Dotfiles</a> <!--<a href="courses.html" target="_blank" style="color: #33ff33;">Coursework</a> --></div> 
+      <div class="prompt">&gt; <a href="Berman_Edward_CV_Website.pdf" target="_blank" style="color: #33ff33;">CV</a>, <a href="pro.html" style="color: #33ff33;">Publications</a>, <a href="https://scholar.google.com/citations?user=rMjtDxQAAAAJ&hl=en&authuser=2" target="_blank" style="color: #33ff33;">Google Scholar</a>, <a href="https://github.com/EdwardBerman" target="_blank" style="color: #33ff33;">GitHub</a>, <a href="newHeadshotMain.jpg" target="_blank" style="color: #33ff33;">Headshot</a>, <a href="https://github.com/EdwardBerman/eddies-dotfiles---See-You-Space-Cowboy" target="_blank" style="color: #33ff33;">Dotfiles</a></div> 
 <!--      <br><div class="input">Select Papers</div> 
 <div class="prompt">&gt; Berman et al. Efficient PSF Modeling with ShOpt.jl: A PSF Benchmarking Study with JWST NIRCam Imaging. <a href="https://arxiv.org/abs/2401.11625" target="_blank" style="color: #33ff33;">Link</a></div> -->
 <!--      <br><div class="input">Writing</div> 
