--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 <div class="prompt">&gt; <a href="blog.html" style="color: #33ff33;">Articles & Blogs</a></div>--> 
       <!--      <div class="prompt">&gt; <a href="music_page.html" style="color: #33ff33;">Music Reviews</a></div> --> 
 
-      <br><div class="input">Contact me</div> 
+      <br><div class="input">Coordinates</div> 
       <div class="input">&gt; berman [dot] ed [at] northeastern [dot] edu</div>
       <!-- <br><div class="input">Fun</div> 
        <div class="input">&gt; curl https://EdwardBerman.github.io/personal-website/ascii-art.txt</div>
