--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
       <!--      <div class="prompt">&gt; <a href="music_page.html" style="color: #33ff33;">Music Reviews</a></div> --> 
 
       <br><div class="input">Coordinates</div> 
-      <div class="input">&gt; berman [dot] ed [at] northeastern [dot] edu</div>
+      <div class="input">&gt; email: berman [dot] ed [at] northeastern [dot] edu</div> 
+      <div class="input">&gt; Discord: bermanator</div> 
       <!-- <br><div class="input">Fun</div> 
        <div class="input">&gt; curl https://EdwardBerman.github.io/personal-website/ascii-art.txt</div>
         <div class="input">&gt; My online handle is often <b>bermanator</b> or some variant</div>
