--- a/index.html
+++ b/index.html
@@ -136,6 +136,9 @@
       <br><div class="input">Coordinates</div> 
       <div class="input">&gt; email: berman [dot] ed [at] northeastern [dot] edu</div> 
       <div class="input">&gt; Discord: bermanator</div> 
+
+      <br><div class="input">Jukebox</div> 
+      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0tkBOcK7oRVXQJY97zzSvr?utm_source=generator" width="50%" height="75" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
       <!-- <br><div class="input">Fun</div> 
        <div class="input">&gt; curl https://EdwardBerman.github.io/personal-website/ascii-art.txt</div>
         <div class="input">&gt; My online handle is often <b>bermanator</b> or some variant</div>
