--- a/blog.html
+++ b/blog.html
@@ -22,11 +22,11 @@
             font-family: monospace;
         }
   body {
-    background-image: url('JWST.jpeg');    
-    background-size: cover; /* Cover the entire window */    
-    background-position: center center; /* Center the image in the window */    
+    background-image: url('JWST.jpeg');
+    background-size: cover; /* Cover the entire window */
+    background-position: center center; /* Center the image in the window */
     background-attachment: fixed;
-
+    
     background-color: #0a0a0a;
     font-family: 'Courier New', Courier, monospace;
     color: #33ff33;
@@ -40,7 +40,7 @@
   }
 
   .terminal {
-    background-color: rgba(13, 13, 13, 0.9);
+    background-color: rgba(13, 13, 13, 0.97);
     /*background-color: #0d0d0d;*/
     border-radius: 5px;
     padding: 20px;
@@ -112,16 +112,16 @@
 </head>
 <body>
   <div class="terminal">
-    <div class="terminal-header">
+    <!--<div class="terminal-header">
       <span class="dot red-dot"></span>
       <span class="dot yellow-dot"></span>
-      <span class="dot green-dot"></span>
-    </div>
-    <div class="terminal-body"> <br>
+      <span class="dot green-dot"></span>-
+    </div>-->
+    <div class="terminal-body"> 
  <div class="prompt">$ Eddie Berman / blog <a href="index.html" style="color: #33ff33;">   (Back)</a></div>
- <br>      <div class="input">Articles</div> <br>
+ <br>      <div class="input">Articles</div> 
  <div class="prompt">&gt; <a href="blogs/mlpde.pdf" target="_blank" style="color: #33ff33;">Machine Learning Model Discovery : Connecting Random Walks and Partial Differential Equations (10/22/2022)</a></div> 
- <br>      <div class="input">Blog / Shortform</div> <br>
+ <br>      <div class="input">Blog / Shortform</div>
  <div class="prompt">&gt; Coming Soon </div> 
   <br>
 
