--- a/publications.html
+++ b/publications.html
@@ -22,7 +22,7 @@
             font-family: monospace;
         }
   body {
-    background-image: url('astro_out.png');
+    background-image: url('alt_astro_out.png');
     background-size: cover; /* Cover the entire window */
     background-position: center center; /* Center the image in the window */
     background-attachment: fixed;
@@ -120,28 +120,12 @@
       <span class="dot green-dot"></span>-
     </div>-->
     <div class="terminal-body"> 
-      <div class="prompt"><b>Eddie Berman.</b> Space Cowboy, Dandy Guy, and JWST caretaker. <i>It's nuts</i>. <!--<br><br>I work on Imaging, Lensing, and Simulations for COSMOS-Web: The James Webb Space Telescope Cosmic Origins Survey. See my Google Scholar for a complete list of my publications.--></div>
-      <!--<br><div class="input">News <a href="old_news.html" style="color: #33ff33;">(See Older)</a></div> 
-      <div class="prompt">&gt; (04/23/24) Joining the Network Science Institute as a Research Co-op</div> 
-      <div class="prompt">&gt; (03/19/24) Gave an invited talk at Columbia University! Thank you <a href="http://user.astro.columbia.edu/~frits/Frits.html" target="_blank" style="color: #33ff33;">Frits</a> for hosting :)</div> 
-      <div class="prompt">&gt; (01/08/24) Awarded the PEAK Summit Research Award ($3,000)</div> -->
-      <br><div class="input">Links</div> 
-      <div class="prompt">&gt; <a href="Berman_Edward_CV_Website.pdf" target="_blank" style="color: #33ff33;">CV</a>, <a href="publications.html" style="color: #33ff33;">Publications</a>, <a href="https://scholar.google.com/citations?user=rMjtDxQAAAAJ&hl=en&authuser=2" target="_blank" style="color: #33ff33;">Google Scholar</a>, <a href="https://github.com/EdwardBerman" target="_blank" style="color: #33ff33;">GitHub</a>, <a href="newHeadshotMain.jpg" target="_blank" style="color: #33ff33;">Headshot</a>, <a href="https://github.com/EdwardBerman/eddies-dotfiles---See-You-Space-Cowboy" target="_blank" style="color: #33ff33;">Dotfiles</a></div> 
-<!--      <br><div class="input">Select Papers</div> 
-<div class="prompt">&gt; Berman et al. Efficient PSF Modeling with ShOpt.jl: A PSF Benchmarking Study with JWST NIRCam Imaging. <a href="https://arxiv.org/abs/2401.11625" target="_blank" style="color: #33ff33;">Link</a></div> -->
-<!--      <br><div class="input">Writing</div> 
-<div class="prompt">&gt; <a href="blog.html" style="color: #33ff33;">Articles & Blogs</a></div>--> 
-      <!--      <div class="prompt">&gt; <a href="music_page.html" style="color: #33ff33;">Music Reviews</a></div> --> 
-
-      <br><div class="input">Coordinates</div> 
-      <div class="input">&gt; email: berman [dot] ed [at] northeastern [dot] edu</div> 
-      <div class="input">&gt; Discord: bermanator</div> 
-      <br><div class="input">JWST COSMOS</div> 
-      <div class="input">&gt; The background of this website is one of the "Pillars of the Creation", an area of active star formation in the Eagle Nebula captured by the Hubble Telescope. I am working on imaging techniques for the higher resolution, infrared imager in the James Webb Space Telescope with the COSMOS-Web Survey. This image was produced using the wonderful AstroImage.jl library. I used the vanimo colorscheme to make it pretty.</div> 
-
-      <br><div class="input">Jukebox</div> 
-      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0tkBOcK7oRVXQJY97zzSvr?utm_source=generator&theme=0" width="50%" height="75" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-      <div class="input">:wq</div> 
+ <div class="prompt">$ Eddie Berman / Publications <a href="index.html" style="color: #33ff33;">   (Back)</a></div>
+      <br><div class="input">Papers</div> 
+      <p><b>Efficient PSF Modeling with ShOpt.jl: A PSF Benchmarking Study with JWST NIRCam Imaging</b><br><u>Edward Berman</u>, Jacqueline McCleary, et al. <br><b>In submission to the Astronomical Journal.</b></p> 
+      <p><b>ShOpt.jl : A Julia Package for Empirical Point Spread Function Characterization of JWST NIRCam Data</b><br><u>Edward Berman</u>, Jacqueline McCleary <br><b>In submission to the Journal of Open Source Software, AAS Companion Paper. Conditionally accepted.</b></p>
+      <p><b>Can It Edit? Evaluating the Ability of Large Language Models to Follow Code Editing Instructions</b><br>Federico Cassano, Luisa Li, Akul Sethi, Noah Shinn, Abby Brennan-Jones, Jacob Ginesin, <u>Edward Berman</u>, George Chakhnashvili, Anton Lozhkov, Carolyn Jane Anderson, Arjun Guha<br><b>In submission to the first annual Conference on Language Modeling, 2024</b></p>
+      <p><b>Reflexion: Language Agents with Verbal Reinforcement Learning</b><br>Noah Shinn, Federico Cassano, <u>Edward Berman</u>, Ashwin Gopinath, Karthik Narasimhan, Shunyu Yao<br>ArXiv Preprint </p>
       <!-- <br><div class="input">Fun</div> 
        <div class="input">&gt; curl https://EdwardBerman.github.io/personal-website/ascii-art.txt</div><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0tkBOcK7oRVXQJY97zzSvr?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         <div class="input">&gt; My online handle is often <b>bermanator</b> or some variant</div>
