--- a/publications.html
+++ b/publications.html
@@ -29,7 +29,7 @@
     
     background-color: #0a0a0a;
     font-family: 'Courier New', Courier, monospace;
-    color: #33ff33;
+    color: #ff3333;
     margin: 0;
     line-height: 1.5; /* Increase the line-height for more space between lines */
     padding: 0;
@@ -44,7 +44,7 @@
     /*background-color: #0d0d0d;*/
     border-radius: 5px;
     padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
+    box-shadow: 0 0 10px rgba(255, 51, 51, 0.5);
     width: 80%; /* Adjust the width as per your requirement */
     max-width: 1000px; /* Optional: if you want to limit the maximum width */
     max-height: 90vh; /* Prevent terminal from exceeding viewport height */
@@ -120,7 +120,7 @@
       <span class="dot green-dot"></span>-
     </div>-->
     <div class="terminal-body"> 
- <div class="prompt">$ Eddie Berman / Publications <a href="index.html" style="color: #33ff33;">   (Back)</a></div>
+ <div class="prompt">$ Eddie Berman / Publications <a href="index.html" style="color: #ff3333;">   (Back)</a></div>
       <br><div class="input">Papers</div> 
       <p><b>Efficient PSF Modeling with ShOpt.jl: A PSF Benchmarking Study with JWST NIRCam Imaging</b><br><u>Edward Berman</u>, Jacqueline McCleary, et al. <br><b>In submission to the Astronomical Journal.</b></p> 
       <p><b>ShOpt.jl : A Julia Package for Empirical Point Spread Function Characterization of JWST NIRCam Data</b><br><u>Edward Berman</u>, Jacqueline McCleary <br><b>In submission to the Journal of Open Source Software, AAS Companion Paper. Conditionally accepted.</b></p>
