--- a/courses.html
+++ b/courses.html
@@ -22,14 +22,14 @@
             font-family: monospace;
         }
   body {
-    background-image: url('JWST.jpeg');
+    background-image: url('courses_astro_out.png');
     background-size: cover; /* Cover the entire window */
     background-position: center center; /* Center the image in the window */
     background-attachment: fixed;
     
     background-color: #0a0a0a;
     font-family: 'Courier New', Courier, monospace;
-    color: #33ff33;
+    color: #33ffff;
     margin: 0;
     line-height: 1.5; /* Increase the line-height for more space between lines */
     padding: 0;
@@ -44,7 +44,7 @@
     /*background-color: #0d0d0d;*/
     border-radius: 5px;
     padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
+    box-shadow: 0 0 10px rgba(0, 255, 255, 0.5);
     width: 80%; /* Adjust the width as per your requirement */
     max-width: 1000px; /* Optional: if you want to limit the maximum width */
     max-height: 90vh; /* Prevent terminal from exceeding viewport height */
@@ -120,7 +120,7 @@
       <span class="dot green-dot"></span>-
     </div>-->
     <div class="terminal-body"> 
-      <div class="prompt">Eddie Berman / Northeastern Courses <a href="index.html" style="color: #33ff33;">   (Back)</a><br> <br>
+      <div class="prompt">$ Eddie Berman / Northeastern Courses <a href="index.html" style="color: #33ffff;">   (Back)</a><br> <br>
 
         <!--<div class="prompt">&gt; Phys 7301 Classical Mechanics/Math Methods</div> -->
 <div class="prompt">&gt; Math 7234 Optimization and Complexity</div> 
