--- a/cv.html
+++ b/cv.html
@@ -22,14 +22,14 @@
             font-family: monospace;
         }
   body {
-    background-image: url('astro_out.png');
+    background-image: url('cv_astro_out.png');
     background-size: cover; /* Cover the entire window */
     background-position: center center; /* Center the image in the window */
     background-attachment: fixed;
     
     background-color: #0a0a0a;
     font-family: 'Courier New', Courier, monospace;
-    color: #33ff33;
+    color: #3333ff;
     margin: 0;
     line-height: 1.5; /* Increase the line-height for more space between lines */
     padding: 0;
@@ -44,7 +44,7 @@
     /*background-color: #0d0d0d;*/
     border-radius: 5px;
     padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
+    box-shadow: 0 0 10px rgba(51, 51, 255, 0.5);
     width: 80%; /* Adjust the width as per your requirement */
     max-width: 1000px; /* Optional: if you want to limit the maximum width */
     max-height: 90vh; /* Prevent terminal from exceeding viewport height */
@@ -120,28 +120,51 @@
       <span class="dot green-dot"></span>-
     </div>-->
     <div class="terminal-body"> 
-      <div class="prompt"><b>Eddie Berman.</b> Space Cowboy, Dandy Guy, and JWST caretaker. <i>It's nuts</i>. <!--<br><br>I work on Imaging, Lensing, and Simulations for COSMOS-Web: The James Webb Space Telescope Cosmic Origins Survey. See my Google Scholar for a complete list of my publications.--></div>
-      <!--<br><div class="input">News <a href="old_news.html" style="color: #33ff33;">(See Older)</a></div> 
-      <div class="prompt">&gt; (04/23/24) Joining the Network Science Institute as a Research Co-op</div> 
-      <div class="prompt">&gt; (03/19/24) Gave an invited talk at Columbia University! Thank you <a href="http://user.astro.columbia.edu/~frits/Frits.html" target="_blank" style="color: #33ff33;">Frits</a> for hosting :)</div> 
-      <div class="prompt">&gt; (01/08/24) Awarded the PEAK Summit Research Award ($3,000)</div> -->
-      <br><div class="input">Links</div> 
-      <div class="prompt">&gt; <a href="cv.html" style="color: #33ff33;">CV</a>, <a href="publications.html" style="color: #33ff33;">Publications</a>, <a href="https://scholar.google.com/citations?user=rMjtDxQAAAAJ&hl=en&authuser=2" target="_blank" style="color: #33ff33;">Google Scholar</a>, <a href="https://github.com/EdwardBerman" target="_blank" style="color: #33ff33;">GitHub</a>, <a href="newHeadshotMain.jpg" target="_blank" style="color: #33ff33;">Headshot</a>, <a href="https://github.com/EdwardBerman/eddies-dotfiles---See-You-Space-Cowboy" target="_blank" style="color: #33ff33;">Dotfiles</a></div> 
-<!--      <br><div class="input">Select Papers</div> 
-<div class="prompt">&gt; Berman et al. Efficient PSF Modeling with ShOpt.jl: A PSF Benchmarking Study with JWST NIRCam Imaging. <a href="https://arxiv.org/abs/2401.11625" target="_blank" style="color: #33ff33;">Link</a></div> -->
-<!--      <br><div class="input">Writing</div> 
-<div class="prompt">&gt; <a href="blog.html" style="color: #33ff33;">Articles & Blogs</a></div>--> 
-      <!--      <div class="prompt">&gt; <a href="music_page.html" style="color: #33ff33;">Music Reviews</a></div> --> 
+ <div class="prompt">$ Eddie Berman / Publications <a href="index.html" style="color: #3333ff;">   (Back)</a></div>
+ <br><div class="input"><b>Education</b></div> 
+      <p><b> &gt; Bachelor of Science Applied Physics;</b> 2021-2025<br><b> &gt; Bachelor of Science Mathematics;</b> 2021-2025</p> 
+      <div class="input"><b>Publications</b></div> 
+      <p><b> &gt; <a href="publications.html" style="color: #3333ff;" target="_blank">[Here]</a></b></p>
+      <div class="input"><b>Employment</b></div> 
+      <p>
+      <b> &gt; Network Science Institute, Northeastern University;</b> 07/24-Present<br>
+      <b> &gt; McCleary's Group, Northeastern University;</b> 01/23-Present<br>
+      <b> &gt; Northeastern Summer Math Research Program;</b> 05/23-07-23<br>
+      <b> &gt; Air Force Research Laboratory;</b> 06/22-08/22<br>
+      <b> &gt; Griffiss Institute;</b> 06/22-08/22<br>
 
-      <br><div class="input">Coordinates</div> 
-      <div class="input">&gt; email: berman [dot] ed [at] northeastern [dot] edu</div> 
-      <div class="input">&gt; Discord: bermanator</div> 
-      <br><div class="input">JWST COSMOS</div> 
-      <div class="input">&gt; The background of this website is one of the "Pillars of the Creation", an area of active star formation in the Eagle Nebula captured by the Hubble Telescope. I am working on imaging techniques for the higher resolution, infrared imager in the James Webb Space Telescope with the COSMOS-Web Survey. This image was produced using the wonderful AstroImage.jl library. I used the vanimo colorscheme to make it pretty.</div> 
-
-      <br><div class="input">Jukebox</div> 
-      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0tkBOcK7oRVXQJY97zzSvr?utm_source=generator&theme=0" width="50%" height="75" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-      <div class="input">:wq</div> 
+      </p> 
+      <div class="input"><b>International Collaborations and Affiliations</b></div> 
+      <p>
+      <b> &gt; COSMOS-Web: The JWST Cosmic Origins Survey</b><br>
+      <b> &gt; GammaTau AI</b><br>
+      <b> &gt; NSF Institute for AI and Fundamental Interactions</b><br>
+      <b> &gt; American Astronomical Society</b><br>
+      </p>
+      <div class="input"><b>Honors, Awards, and Funding</b></div> 
+      <p>
+      <b> &gt; Northeastern COS Dean's Undergraduate Research Award</b><br>
+      <b> &gt; AJC Merit Scholarship (Declined)</b><br>
+      <b> &gt; PEAK Summit Award</b><br>
+      <b> &gt; Physics Research Co-op Fellowship</b><br>
+      <b> &gt; PEAK Ascent Award</b><br>
+      <b> &gt; REU Grant</b><br>
+      <b> &gt; Dean's Scholarship</b><br>
+      </p>
+      <div class="input"><b>Teaching</b></div> 
+      <p>
+      <b> &gt; Math 4571 Advanced Linear Algebra;</b> Spring 2024<br>
+      <b> &gt; Math 2331 Linear Algebra;</b> Fall 2022<br>
+      </p>
+      <div class="input"><b>Community and Academic Service</b></div> 
+      <p>
+      <b> &gt; GammaTau Reading Group Organizer</b><br>
+      <b> &gt; NEU Mathematics Engagement and Mentorship Association;</b> President<br>
+      <b> &gt; Society of Physics Students Northeastern Chapter;</b> Events and Outreach Coordinator<br>
+      </p>
+      <div class="input"><b>Coursework</b></div> 
+      <p><b> &gt; <a href="courses.html" style="color: #3333ff;" target="_blank">[Here]</a></b></p>
+      
       <!-- <br><div class="input">Fun</div> 
        <div class="input">&gt; curl https://EdwardBerman.github.io/personal-website/ascii-art.txt</div><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0tkBOcK7oRVXQJY97zzSvr?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         <div class="input">&gt; My online handle is often <b>bermanator</b> or some variant</div>
