--- a/cv.html
+++ b/cv.html
@@ -163,7 +163,7 @@
       <b> &gt; Society of Physics Students Northeastern Chapter;</b> Events and Outreach Coordinator<br>
       </p>
       <div class="input"><b>Coursework</b></div> 
-      <p><b> &gt; <a href="courses.html" style="color: #3333ff;" target="_blank">[Here]</a></b></p>
+      <p><b> &gt; <a href="courses.html" style="color: #3333ff;">[Here]</a></b></p>
       
       <!-- <br><div class="input">Fun</div> 
        <div class="input">&gt; curl https://EdwardBerman.github.io/personal-website/ascii-art.txt</div><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0tkBOcK7oRVXQJY97zzSvr?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
