--- a/cv.html
+++ b/cv.html
@@ -120,7 +120,7 @@
       <span class="dot green-dot"></span>-
     </div>-->
     <div class="terminal-body"> 
- <div class="prompt">$ Eddie Berman / Publications <a href="index.html" style="color: #3333ff;">   (Back)</a></div>
+ <div class="prompt">$ Eddie Berman / CV <a href="index.html" style="color: #3333ff;">   (Back)</a></div>
  <br><div class="input"><b>Education</b></div> 
       <p><b> &gt; Bachelor of Science Applied Physics;</b> 2021-2025<br><b> &gt; Bachelor of Science Mathematics;</b> 2021-2025</p> 
       <div class="input"><b>Publications</b></div> 
