--- a/blog.html
+++ b/blog.html
@@ -22,14 +22,14 @@
             font-family: monospace;
         }
   body {
-    background-image: url('JWST.jpeg');
+    background-image: url('courses_astro_out.png');
     background-size: cover; /* Cover the entire window */
     background-position: center center; /* Center the image in the window */
     background-attachment: fixed;
     
     background-color: #0a0a0a;
     font-family: 'Courier New', Courier, monospace;
-    color: #33ff33;
+    color: #33ffff;
     margin: 0;
     line-height: 1.5; /* Increase the line-height for more space between lines */
     padding: 0;
@@ -44,9 +44,11 @@
     /*background-color: #0d0d0d;*/
     border-radius: 5px;
     padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
+    box-shadow: 0 0 10px rgba(0, 255, 255, 0.5);
     width: 80%; /* Adjust the width as per your requirement */
     max-width: 1000px; /* Optional: if you want to limit the maximum width */
+    max-height: 90vh; /* Prevent terminal from exceeding viewport height */
+    overflow: auto; /* Enable scrolling within terminal */
   }
 
   .terminal-header {
@@ -118,15 +120,34 @@
       <span class="dot green-dot"></span>-
     </div>-->
     <div class="terminal-body"> 
- <div class="prompt">$ Eddie Berman / blog <a href="index.html" style="color: #33ff33;">   (Back)</a></div>
- <br>      <div class="input">Articles</div> 
- <div class="prompt">&gt; <a href="blogs/mlpde.pdf" target="_blank" style="color: #33ff33;">Machine Learning Model Discovery : Connecting Random Walks and Partial Differential Equations (10/22/2022)</a></div> 
- <br>      <div class="input">Blog / Shortform</div>
- <div class="prompt">&gt; Coming Soon </div> 
-  <br>
+      <div class="prompt">$ Eddie Berman / Northeastern Courses <a href="index.html" style="color: #33ffff;">   (Back)</a><br> <br>
 
-    </div>
-    </div>
+        <!--<div class="prompt">&gt; Phys 7301 Classical Mechanics/Math Methods</div> -->
+<div class="prompt">&gt; Math 7234 Optimization and Complexity</div> 
+<div class="prompt">&gt; Math 7223 Riemannian Optimization</div> 
+<!--<div class="prompt">&gt; Math 5131 Introduction to Mathematical Methods and Modeling</div>-->  
+<div class="prompt">&gt; Phys 5118 General Relativity and Cosmology</div> 
+<div class="prompt">&gt; Math 4991 Research Independent Study (Machine Learning PDE Discovery)</div> 
+<div class="prompt">&gt; Phys 4606 Mathematical and Computational Methods for Physics</div> 
+<div class="prompt">&gt; Math 4571 Advanced Linear Algebra</div> 
+<!--<div class="prompt">&gt; Math 4555 Complex Variables</div> -->
+<div class="prompt">&gt; Math 4545 Fourier Series and PDEs</div> 
+<div class="prompt">&gt; Phys 4305 Thermodynamics and Statistical Mechanics</div> 
+<div class="prompt">&gt; Phys 4115 Quantum Mechanics</div>  
+<div class="prompt">&gt; Phys 3601 Electricity and Magnetism 1</div>  
+<div class="prompt">&gt; Engw 3307 Advanced Writing in the Sciences</div>  
+<div class="prompt">&gt; Math 3275 Advanced Group Theory</div> 
+<div class="prompt">&gt; Math 3181 Advanced Probability and Statistics</div> 
+<!--<div class="prompt">&gt; Math 3150 Real Analysis</div> -->
+<div class="prompt">&gt; Pols 2358 Current Issues in Cities and Suburbs</div> 
+<div class="prompt">&gt; Math 2341 Differential Equations and Linear Algebra</div> 
+<div class="prompt">&gt; Math 2321 Calculus 3 For Science and Engineering</div> 
+<div class="prompt">&gt; Phys 2303 Modern Physics</div> 
+<div class="prompt">&gt; CS   1800 Discrete Structures</div> 
+<div class="prompt">&gt; ENVR 1500 Introduction to Environmental, Social, and Biological Data</div> 
+
+
+      </div>
     </div>
   </div>
 <script>
@@ -138,19 +159,3 @@
 </body>
 </html>
 
-<!--
-  <h1 id="music-lyrics-and-story-reviews">Music (Lyrics and Story) Reviews</h1>    
-<p>I am not a musician and I do not tend to be. However, I love a good story, and what are songs if not stories. The lyrics and stories told in a song are what I wish to talk about here.</p>
-<h2 id="handheld-ultraq">Get Yourself A Friend -- UltraQ</h2>    
-<h3 id="score">Score</h3>    
-<p>10/10                                                                                                     </p>
-<h3 id="general-thoughts">General Thoughts</h3>    
-<p>Bop.                                                                                                     </p>
-<h3 id="specifics">Specifics</h3>    
-<p>The start of the song is the best part. The "Falling asleep to just to hold your hand" part is something that I would normally consider cliche, but in the context of this song I really like it. Rather than focusing on the intimate aspects of a relationship, this song focuses on the kinship. The choice of the word friend when the subject of the song is clearly more than a friend is fascinating, and I like the idea that the singer is dreaming of friendship above all else in his sleep. 
-    
-</p>    
-<p><a href="https://open.spotify.com/track/6kwpiJvZLscW06vXl42jjr?si=8f82c47b6eb94ee8">Song Link</a> </p>
-
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6kwpiJvZLscW06vXl42jjr?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
- -->
