--- a/peeps.html
+++ b/peeps.html
@@ -129,7 +129,7 @@
         <div class="prompt">&gt; <a href="https://www.rzhu.cc/" style="color: #33ff33;" target="_blank">Ryan</a> </div> 
         <div class="prompt">&gt; <a href="https://peter.bio/" style="color: #33ff33;" target="_blank">Peter</a> </div> 
         <div class="prompt">&gt; <a href="https://cadentj.com/" style="color: #33ff33;" target="_blank">Caden</a> </div> 
-        <div class="prompt">&gt; <a href="https://luisa-li.github.io/site/" style="color: #33ff33;" target="_blank">Luisa</a> </div> 
+        <div class="prompt">&gt; <a href="https://www.luisali.com/" style="color: #33ff33;" target="_blank">Luisa</a> </div> 
 
 
       </div>
