--- a/cv.html
+++ b/cv.html
@@ -128,7 +128,7 @@
       <div class="input"><b>Employment</b></div> 
       <p>
       <b> &gt; Network Science Institute, Northeastern University;</b> 07/24-Present<br>
-      <b> &gt; McCleary's Group, Northeastern University;</b> 01/23-Present<br>
+      <b> &gt; McCleary's Group, Northeastern University;</b> 01/23-07/24<br>
       <b> &gt; Northeastern Summer Math Research Program;</b> 05/23-07-23<br>
       <b> &gt; Air Force Research Laboratory;</b> 06/22-08/22<br>
       <b> &gt; Griffiss Institute;</b> 06/22-08/22<br>
