--- a/courses.html
+++ b/courses.html
@@ -142,6 +142,7 @@
 <div class="prompt">&gt; Pols 2358 Current Issues in Cities and Suburbs</div> 
 <div class="prompt">&gt; Math 2341 Differential Equations and Linear Algebra</div> 
 <div class="prompt">&gt; Math 2321 Calculus 3 For Science and Engineering</div> 
+<div class="prompt">&gt; Musc 2320 40,000 Years of Music Technology</div> 
 <div class="prompt">&gt; Phys 2303 Modern Physics</div> 
 <div class="prompt">&gt; CS   1800 Discrete Structures</div> 
 <div class="prompt">&gt; ENVR 1500 Introduction to Environmental, Social, and Biological Data</div> 
