--- a/peeps.html
+++ b/peeps.html
@@ -129,6 +129,7 @@
         <div class="prompt">&gt; <a href="https://www.rzhu.cc/" style="color: #33ff33;" target="_blank">Ryan</a> </div> 
         <div class="prompt">&gt; <a href="https://cadentj.com/" style="color: #33ff33;" target="_blank">Caden</a> </div> 
         <div class="prompt">&gt; <a href="https://www.luisali.com/" style="color: #33ff33;" target="_blank">Luisa</a> </div> 
+        <div class="prompt">&gt; <a href="https://www.becklabash.com/" style="color: #33ff33;" target="_blank">Beck</a> </div> 
 
 
       </div>
