--- a/index.html
+++ b/index.html
@@ -141,8 +141,7 @@
 
       <br><div class="input">Jukebox</div> 
       <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0tkBOcK7oRVXQJY97zzSvr?utm_source=generator&theme=0" width="50%" height="75" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-      <br><br><div class="input">My Erdos number is 4</div> 
-      <br><div class="input">:wq</div> 
+      <div class="input">:wq</div> 
       <!-- <br><div class="input">Fun</div> 
        <div class="input">&gt; curl https://EdwardBerman.github.io/personal-website/ascii-art.txt</div><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0tkBOcK7oRVXQJY97zzSvr?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         <div class="input">&gt; My online handle is often <b>bermanator</b> or some variant</div>
