--- a/publications.html
+++ b/publications.html
@@ -121,7 +121,7 @@
     </div>-->
     <div class="terminal-body"> 
  <div class="prompt">$ Eddie Berman / Publications <a href="index.html" style="color: #ff3333;">   (Back)</a></div>
-      <br><div class="input">Papers</div> 
+      <br><div class="input">Erdos Number: 4. H-Index: 2</div> 
       <p><b>Efficient PSF Modeling with ShOpt.jl: A PSF Benchmarking Study with JWST NIRCam Imaging</b><br><u>Edward Berman</u>, Jacqueline McCleary, et al. <br><b>Astronomical Journal, to appear. <a href="https://arxiv.org/abs/2401.11625" style="color: #ff3333;" target="_blank">PDF</a></b></p> 
       <p><b>ShOpt.jl : A Julia Package for Empirical Point Spread Function Characterization of JWST NIRCam Data</b><br><u>Edward Berman</u>, Jacqueline McCleary <br><b>Journal of Open Source Software, AAS Companion Paper. To appear. <a href="https://arxiv.org/abs/2310.00071" style="color: #ff3333;" target="_blank">PDF</a></b></p>
       <p><b>Can It Edit? Evaluating the Ability of Large Language Models to Follow Code Editing Instructions</b><br>Federico Cassano, Luisa Li, Akul Sethi, Noah Shinn, Abby Brennan-Jones, Jacob Ginesin, <u>Edward Berman</u>, George Chakhnashvili, Anton Lozhkov, Carolyn Jane Anderson, Arjun Guha<br><b>The first annual Conference on Language Modeling, to appear. <a href="https://arxiv.org/abs/2312.12450" target="_blank" style="color: #ff3333;">PDF</a></b></p>
