--- a/erdos.html
+++ b/erdos.html
@@ -117,23 +117,12 @@
     <!--<div class="terminal-header">
       <span class="dot red-dot"></span>
       <span class="dot yellow-dot"></span>
-         (Back)<a href="publications.html" style="color: #ff3333;">   (Back)</a><
       <span class="dot green-dot"></span>-
     </div>-->
     <div class="terminal-body"> 
- <div class="prompt">$ Eddie Berman / Publications <a href="index.html" style="color: #ff3333;">   (Back)</a></div>
- <br><div class="input"><a href="erdos/html" style="color: #ff3333;">Erd&#246;s</a> Number: 4. H-Index: 2.</div> 
-      <p><b>Efficient PSF Modeling with ShOpt.jl: A PSF Benchmarking Study with JWST NIRCam Imaging</b><br><u>Edward Berman</u>, Jacqueline McCleary, et al. <br><b>Astronomical Journal, to appear. <a href="https://arxiv.org/abs/2401.11625" style="color: #ff3333;" target="_blank">PDF</a></b></p> 
-      <p><b>ShOpt.jl : A Julia Package for Empirical Point Spread Function Characterization of JWST NIRCam Data</b><br><u>Edward Berman</u>, Jacqueline McCleary <br><b>Journal of Open Source Software, AAS Companion Paper. To appear. <a href="https://arxiv.org/abs/2310.00071" style="color: #ff3333;" target="_blank">PDF</a></b></p>
-      <p><b>Can It Edit? Evaluating the Ability of Large Language Models to Follow Code Editing Instructions</b><br>Federico Cassano, Luisa Li, Akul Sethi, Noah Shinn, Abby Brennan-Jones, Jacob Ginesin, <u>Edward Berman</u>, George Chakhnashvili, Anton Lozhkov, Carolyn Jane Anderson, Arjun Guha<br><b>The first annual Conference on Language Modeling, to appear. <a href="https://arxiv.org/abs/2312.12450" target="_blank" style="color: #ff3333;">PDF</a></b></p>
-      <p><b>Reflexion: Language Agents with Verbal Reinforcement Learning</b><br>Noah Shinn, Federico Cassano, <u>Edward Berman</u>, Ashwin Gopinath, Karthik Narasimhan, Shunyu Yao<br>ArXiv Preprint. <a href="https://arxiv.org/abs/2303.11366" target="_blank" style="color: #ff3333;">PDF</a></p>
-      <!-- <br><div class="input">Fun</div> 
-       <div class="input">&gt; curl https://EdwardBerman.github.io/personal-website/ascii-art.txt</div><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0tkBOcK7oRVXQJY97zzSvr?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        <div class="input">&gt; My online handle is often <b>bermanator</b> or some variant</div>
-        <div class="input">&gt; I daily drive a System76 Lemur Pro running PopOS with bspwn. My <a href="https://github.com/EdwardBerman/eddies-dotfiles---See-You-Space-Cowboy" target="_blank" style="color: #33ff33;">dotfiles</a> are inspired by <a href="https://github.com/SeniorMars/dotfiles" target="_blank" style="color: #33ff33;">SirCharlieMars</a>, <a href="https://github.com/JakeGinesin/dotfiles" target="_blank" style="color: #33ff33;">Jake Ginesin</a>, <a href="https://github.com/cassanof/dotfiles" target="_blank" style="color: #33ff33;">Federico Cassano</a>, and <a href="https://github.com/VaughnValle/blue-sky" target="_blank" style="color: #33ff33;">VaughnValle</a> </div> -->
-<!-- <div class="input">&gt; <a target="_blank" style="color: #33ff33;" href="https://myanimelist.net/animelist/bermanator29?">My Anime List</a></div>
-<div class="input">&gt; <a target="_blank" style="color: #33ff33;" href="https://myanimelist.net/mangalist/bermanator29?">My Manga List</a></div>
--->    </div>
+ <div class="prompt">$ Eddie Berman / Publications / Erd&#246;s # <a href="publications.html" style="color: #ff3333;">   (Back)</a></div>
+      <br><div class="input">P. Erdős → H.S. Shapiro → M. Tegmark → F. Cassano → E. Berman</div> 
+ </div>
 <a href="ascii-art.txt"></a>
      </div>
       </div>
