--- a/courses.html
+++ b/courses.html
@@ -120,7 +120,7 @@
       <span class="dot green-dot"></span>-
     </div>-->
     <div class="terminal-body"> 
-      <div class="prompt">$ Eddie Berman / Northeastern Courses <a href="index.html" style="color: #33ffff;">   (Back)</a><br> <br>
+      <div class="prompt">$ Eddie Berman / CV / Northeastern Courses <a href="cv.html" style="color: #33ffff;">   (Back)</a><br> <br>
 
         <!--<div class="prompt">&gt; Phys 7301 Classical Mechanics/Math Methods</div> -->
 <div class="prompt">&gt; Math 7234 Optimization and Complexity</div> 
