--- a/index.html
+++ b/index.html
@@ -138,8 +138,9 @@
       <div class="input">&gt; Discord: bermanator</div> 
       <br><div class="input">JWST COSMOS</div> 
       <div class="input">&gt; The background of this website is one of the "Pillars of the Creation", an area of active star formation in the Eagle Nebula captured by the Hubble Telescope. I am working on imaging techniques for the higher resolution, infrared imager in the James Webb Space Telescope with the COSMOS-Web Survey. This image was produced using the wonderful AstroImage.jl library. I used the vanimo colorscheme to make it pretty.</div> 
-      <br><div class="input">If you know the answer to this question, please send me an email.</div> 
+      <br><div class="input">If you know the answer to any of these question, please send me an email.</div> 
       <div class="input">&gt; What makes a city unique?</div> 
+      <div class="input">&gt; Why is it hard to spin a basketball on your finger?</div> 
 
       <br><div class="input">Jukebox</div> 
       <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0tkBOcK7oRVXQJY97zzSvr?utm_source=generator&theme=0" width="50%" height="75" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
